--- a/annexe/Annexe.tex
+++ b/annexe/Annexe.tex
@@ -18,7 +18,7 @@
       travaux réalisés pendant la thèse mais pas assez aboutis ou trop
       éloignés du sujet de ce manuscrit pour y figurer à part
       entière. Cette partie se divise en deux sous-parties. La
-      première correspond à l'annexe~\ref{ann:JFPC}~\ref{ann:JFPC} et
+      première correspond à l'annexe~\ref{ann:JFPC} et
       présente l'étude du cas discret du problème d'ordonnancement
       continu à contraintes énergétiques (article publié aux
       Journées Francophones de la Programmation par
@@ -29,12 +29,12 @@
       La seconde annexe (ann.~\ref{ann:IESM}) porte sur la mise en place d'une
       matheuristique pour un problème industriel d'ordonnancement avec
       contraintes et objectifs énergétiques. Ce travail s'inscrit dans
-      le cadre d'une collaboration pour un projet franco-chilien et a
+      le cadre d'une collaboration pour le projet franco-chilien ECOS C13E04 et a
       été publié dans la conférence IESM (International Conference on
       Industrial Engineering and Systems
       Management~\cite{Nattaf_IESM}). Ce paragraphe présente tout
       d'abord le problème étudié, puis, dans un second temps, trois
-      modèles de programmation linéaire sont introduits. Les deux
+      modèles de programmation linéaire à événements sont introduits. Les deux
       premiers, constituant des méthodes de résolution exacte,
       comportent un nombre de variables et de contraintes trop
       important pour expérer les résoudre en temps raisonnable. De ce
