--- a/main_file.bib
+++ b/main_file.bib
@@ -286,7 +286,7 @@ author = "Rainer Kolisch"
 @ARTICLE{PSPLIB,
     author = {Rainer Kolisch and Arno Sprecher},
     title = {PSPLIB -- A project scheduling problem library},
-    journal = {EUROPEAN JOURNAL OF OPERATIONAL RESEARCH},
+    journal = {European Journal of Operational Research},
     year = {1996},
     volume = {96},
     pages = {205--216}
