--- a/part1/chap1.tex
+++ b/part1/chap1.tex
@@ -1,6 +1,6 @@
 \cleardoublepage
 \begin{minipage}{0.95\linewidth}
-  \part{Introduction}
+  \part{Présentation du problème}
   \vspace{15mm} % l'espacement souhaité
   \parttoc 
 
@@ -14,7 +14,7 @@
     \hrule
     \vspace{0.5cm}
     {\it  La première partie de cette thèse est consacrée à la présentation de
-    la problématique et de son contexte général. Nous commençons donc,
+      la problématique et de son contexte général. Nous commençons donc,
     dans un premier temps, par définir les principales caractéristiques
     d'un problème d'ordonnancement et plus précisément des problèmes
     d'ordonnancement à contraintes de ressource. Pour ces derniers,
