--- a/part3/CECSP/modele_CECSP.tex
+++ b/part3/CECSP/modele_CECSP.tex
@@ -28,7 +28,8 @@ dans~\cite{Nattaf_ORSpectrum}.
 \subsection{Modèle indexé par le temps}
 
 La première formulation proposée est une formulation indexée par le
-temps. Comme pour le modèle à temps discret du \RCPSP l'horizon de
+temps. Ce modèle a été conçu dans le cadre d'une collaboration avec
+David Rivreau~\cite{Nattaf_ORSpectrum}. Comme pour le modèle à temps discret du \RCPSP~l'horizon de
 temps est ici divisé en périodes de taille unitaire. Le calcul d'une
 borne supérieure $T$ sur la durée totale du projet est trivial: il
 suffit de prendre la plus grande date échue, i.e. $T=\max_{i \in \A}
