--- a/conclu.tex
+++ b/conclu.tex
@@ -3,7 +3,7 @@
 Beaucoup de problèmes d'ordonnancement cumulatifs définis dans la
 littérature souffrent d'une limitation imposant que chaque activité
 aille une durée et une consommation de ressource fixe durant son 
-exécution. Il arrive cependant, dans de nombreux cas pratique, que
+exécution. Il arrive cependant, dans de nombreux cas pratiques, que
 cette limitation empêche la modélisation correcte du problème. De ce
 fait, de nouveaux problèmes permettant de modéliser la malléabilité
 des activités, i.e. ayant une durée et une consommation de ressource
@@ -20,14 +20,14 @@ formes quasi quelconques. De ce fait, un des premiers travail effectué
 dans cette thèse a été une étude détaillée du problème. Cette étude a
 permis de décrire des cas particuliers du \CECSP~pouvant être résolus
 en temps polynomial mais aussi a permis, dans certains cas, la mise en
-place d'une propriété permettant de décomplexifier le problème en
+place d'une propriété permettant de simplifier le problème en
 caractérisant les différentes formes que peut prendre une activité. 
 Cette simplification du problème a ensuite été utilisée pour mettre en
 place des méthodes de résolution pour le \CECSP, souvent adaptées de
 méthodes existantes dans le cadre des problèmes d'ordonnancement
 cumulatifs. 
 
-Les méthodes de résolution dédiées au \CECSP~et décrites dans ce
+Les méthodes de résolution dédiées au \CECSP~et proposées dans ce
 manuscrit sont regroupées en deux catégories: les méthodes issues de
 la programmation par contraintes et adaptées des méthodes définies
 pour la contrainte cumulative et les méthodes issues de la
@@ -35,13 +35,16 @@ programmation linéaire mixte et en nombres entiers adaptées des
 méthodes définies pour le \RCPSP. 
 
 Plusieurs des techniques de programmation par contraintes utilisées dans le
-cadre de la résolution de la contrainte cumulative ont décrites et, en
+cadre de la résolution de la contrainte cumulative ont été décrites et, en
 particulier, les principaux algorithmes de filtrage qui lui sont
-dédiés. Une partie de ces algorithmes a été adaptés au cas du
+dédiés. Une partie de ces algorithmes a été adapté au cas du
 \CECSP. C'est le cas, par exemple, du raisonnement énergétique qui
 prend une part importante de ce manuscrit. Ce raisonnement comptant
 parmi les plus forts dans le cas de la contrainte cumulative a été le
-premier à avoir été adapté. De plus, les récents travaux de Derrien
+premier à avoir été adapté  avec en particulier la caractérisation
+d'un ensemble d'intervalles suffisant pour l'application du
+raisonnement énergétique, de
+cardinalité polynomiale. De plus, les récents travaux de Derrien
 {\it et al.} permettant l'accélération de ce raisonnement ont aussi pu
 être adaptés. D'autres raisonnements comme le Time-Table, le
 raisonnement disjonctif et le raisonnement Time-Table disjonctif ont
@@ -59,22 +62,23 @@ Différents modèles de programmation linéaire en nombres entiers pour le
 ces modèles, le premier repose sur une formulation indexée par le temps
 et les deux autres sur des formulations basées sur les événements. Ces
 dernières ont montré leur efficacité dans le cas où l'horizon de temps
-des modèles devient très grand. De plus, contrairement aux modèles
-indexés par le temps, ils permettent de modéliser des dates de début
+des modèles devient très grand. De plus, contrairement aux
+formulations 
+indexés par le temps, elles permettent de modéliser des dates de début
 et de fin d'activités continue. De ce fait, nous avons adapté ces
 modèles au cas du \CECSP. Un modèle indexé par le temps est aussi
 détaillé. En effet, ces modèles ont prouvé leur efficacité dans le
 cadre du \RCPSP.
 
 Pour chacun des modèles présentés, des inégalités valides et/ou des
-techniques de coupes ont été présenté afin de renforcer ces
+techniques de coupes ont été présentées afin de renforcer ces
 derniers. Des inégalités directement déduites du raisonnement
 énergétique sont introduites pour les modèles indexés par le temps du
 \CECSP~et du \RCPSP. Pour les modèles à événements, une comparaison
 des relaxations linéaires des deux modèles présentés est
 effectuée. Des inégalités permettant de renforcer le modèle ayant les
 moins bonnes relaxations, le modèle On/Off, sont présentées. Ces
-inégalités, appelées inégalités de non-préemption, ont été montré
+inégalités, appelées inégalités de non-préemption, ont été montrées 
 comme appartenant à l'enveloppe convexe du polyèdre formé par
 l’ensemble de toutes les affectations possibles pour les variables
 binaires correspondant à une seule activité. Enfin, plusieurs autres
@@ -83,7 +87,7 @@ et les performances relatives à l'ajout de différentes combinaisons de
 ces inégalités au modèle ont été détaillées. 
 
 Malgré tout, le \CECSP~reste un problème difficile, en particulier
-dans sa forme générale. En effet, es résultats présentés dans cette
+dans sa forme générale. En effet, les résultats présentés dans cette
 thèse nous ont permis de résoudre des instances allant jusqu'à $60$
 activités pour la version décisionnelle de ce problème et seulement
 jusqu'à $30$ pour la version ayant pour objectif la minimisation de la
@@ -92,8 +96,8 @@ consommation de la ressource.
 Le \CECSP~est un nouveau problème pour lequel de nombreux travaux
 restent à faire. Parmi les perspectives directes des résultats
 présentés dans ce manuscrit, on trouve:
-\paragraph{La considération de fonction de rendement plus générale.} Même si les fonctions concaves permettent une plus grande
-  liberté d'expression du problème, elles restent insuffisante pour
+\paragraph{La considération de fonctions de rendement plus générales.} Même si les fonctions concaves permettent une plus grande
+  liberté d'expression du problème, elles restent insuffisantes pour
   modéliser certains problèmes réels. Dans un premier temps, la
   considération de fonctions de rendement convexes est une
   continuation naturelle de ce travail. Cependant, ce n'est toujours
@@ -102,9 +106,9 @@ présentés dans ce manuscrit, on trouve:
   mais sont convexes sur certains intervalles et concaves sur les
   autres intervalles. 
 
-\paragraph{La mise en place d'algorithme de filtrage plus
-  performants.} Qu'il s'agisse d'algorithme plus performant en termes
-de temps de calcul ou plus performant en termes de filtrage, cette
+\paragraph{La mise en place d'algorithmes de filtrage plus
+  performants.} Qu'il s'agisse d'algorithmes plus performants en termes
+de temps de calcul ou plus performants en termes de filtrage, cette
 direction de recherche est une perspective importante. L'adaptation
 d'autres algorithmes de filtrage mis en place pour la contrainte
 cumulative semble une piste intéressante mais l'accélération du temps
@@ -126,14 +130,14 @@ ce type pourraient être définies ou de meilleures techniques
 d'intégration de ces inégalités dans le processus de résolution
 pourraient être mises en place. 
 
-L'amélioration des modèles à événement est aussi une piste de
+L'amélioration des modèles à événements est aussi une piste de
 recherche importante puisque, contrairement aux modèles indexés par le
 temps, ces derniers permettent d'obtenir des solutions exactes pour le
 \CECSP~mais au prix d'un temps de calcul beaucoup plus important. Pour
 renforcer ces modèles, d'autres jeux d'inégalités, plus fortes,
 peuvent être mises en place. Par exemple, des inégalités décrivant des
 facettes du polyèdre formé par l'ensemble des solutions de chaque
-modèle peuvent être exhibées.
+modèle pourraient être exhibées.
 
 \paragraph{L'utilisation d'autres méthodes de résolution.}
 Les techniques décrites dans ce manuscrit utilisent principalement des
