--- a/part4/res_PL.tex
+++ b/part4/res_PL.tex
@@ -16,7 +16,7 @@ secondes. Le modèle, avec pour objectif la minimisation de la
 consommation totale de ressource, est dans un premier temps utilisé
 pour résoudre les instances. Dans un second temps, nous ajoutons les
 inégalités issues du raisonnement énergétiques décrites dans le
-paragraphe~\ref{sec:ER_TI}. Ces inégalités sont seulement ajouter au
+paragraphe~\ref{sec:ER_TI}. Ces inégalités sont seulement ajoutées au
 n\oe ud racine de l'arbre de recherche. En effet, dû à leur grand
 nombre ($5*|\I|*n$, avec $\I$ l'ensemble des intervalles d'intérêt du
 raisonnement énergétique) , il est difficile, sans algorithme de
@@ -31,16 +31,16 @@ mesurée de la manière suivante:
   \text{gap}=100*\frac{|\text{Objectif final} - \text{Objectif } 1^{ère} \text{  Sol}|}{\text{Objectif final}}
 \]
 Nous avons aussi comparé le temps nécessaire à l'obtention de la
-solution optimale (100 secondes si la solution trouvé n'est pas
+solution optimale (100 secondes si la solution trouvée n'est pas
 optimale), la qualité de la solution, le nombre d'instances résolues
-et le nombre d'entre elles résolues à l'optimal.
+et le nombre d'entre elles résolues à l'optimum.
 
 \begin{table}[!htb]
   \begin{center}\small
     \begin{tabularx}{\linewidth}{|Y|YY|YYYY|YY|YYYY|}
       \hline
       \multirow{2}{*}{\#act.} & \multicolumn{2}{c|}{$1^{ère}$ sol.}&
-      \multicolumn{4}{c|}{final sol.} & \multicolumn{2}{c|}{$1^{ère}$ 
+      \multicolumn{4}{c|}{sol. finale} & \multicolumn{2}{c|}{$1^{ère}$ 
         sol.}&
       \multicolumn{4}{c|}{sol. finale} \\ 
       \cline{2-13} 
@@ -116,17 +116,18 @@ encourageante dans un futur proche.
 Ce paragraphe, dédié à la présentation des résultats obtenus pour les
 modèles à événements, commence par présenter l'algorithme de
 séparation qui sera utilisé dans le modèle On/Off pour séparer les
-inégalités de non-préemption. Nous présenterons ensuite les différents
-résultats obtenus pour les modèles Start/End et On/Off. 
+inégalités de non-préemption. Cet algorithme a été conçu en
+collaboration avec Tam{\'a}s Kis. Nous présenterons ensuite les
+différents résultats obtenus pour les modèles Start/End et On/Off.
 
 \subsubsection{Algorithme de séparation pour les inégalités de non
   préemption} 
 
 L'idée principale de la procédure de séparation pour les inégalités de
-non préemption est que, pour chaque activité $i$, trouver la coupe à
-ajouter au modèle est équivalent à trouver un plus long chemin dans un
-certain graphe. Ce graphe orienté et acyclique est défini de la
-manière suivante:
+non préemption (voir paragraphe~\ref{sec:nonPreem} est que, pour
+chaque activité $i$, trouver la coupe à ajouter au modèle est
+équivalent à trouver un plus long chemin dans un certain graphe. Ce
+graphe orienté et acyclique est défini de la manière suivante:
 \begin{itemize}
 \item à chaque événement de l'ensemble $\E^*$=$\E \setminus\{2n\}$,
 i.e. $\{1,\dots,2n-1\}$, on fait correspondre un sommet;
@@ -146,15 +147,16 @@ chaque sommet $u \in \{1,\dots,2n-3\}$;
 
 De plus, un coût $cost(u,v)$ est associé à chaque arc $(u,v)$
 composant le graphe. Le coût d'un arc de départ est $0$, celui d'un
-arc intermédiaire $(u,v)$ est $cost(u,v)= \overline{z}_{i,u} -
-\min\{ \overline{z}_{i,\ell}\ :\ \ell= u+1,\dots, v-1\}$ et celui
-d'un arc terminal $(u,2n)$ est $\overline{z}_{i,u}$. La construction
-de ce graphe est illustré dans l'exemple~\ref{ex:algo_sep}.
+arc intermédiaire $(u,v)$ est $cost(u,v)= \overline{z}_{i,u} - \min\{
+\overline{z}_{i,\ell}\ :\ \ell= u+1,\dots, v-1\}$ et celui d'un arc
+terminal $(u,2n)$ est $\overline{z}_{i,u}$, avec $\overline{z}_{i,u}$
+la valeur de la variable correspondante. La construction de ce graphe
+est illustrée dans l'exemple~\ref{ex:algo_sep}.
 
 \begin{ex}
 \label{ex:algo_sep}
 Considérons une instance à quatre activités. Le nombre d'événements
-$|\E|$ est égale à $8$. Considérons, par exemple, l'activité $1$. Si
+$|\E|$ est égal à $8$. Considérons, par exemple, l'activité $1$. Si
 nous appliquons la transformation décrite ci-dessus, nous obtenons le
 graphe à $9$ sommets et $30$ arcs décrits par la
 figure~\ref{fig:algo_sep}. Sur ce graphe, seuls les coûts des arcs
@@ -239,7 +241,7 @@ représentés.
 Pour séparer un vecteur $\overline{z}_i \in \mathbb{R}^{\E^*}$, nous
 calculons un plus long chemin dans le graphe à l'aide de la
 programmation dynamique. Pour cela, nous calculons, pour chaque $v \in
-\{1,\dots,2n-1\}$, la valeur de du plus long chemin jusqu'à ce somment
+\{1,\dots,2n-1\}$, la valeur  du plus long chemin jusqu'à ce somment
 $F(v)$ de la manière suivante:
 \begin{equation}
   F(v) = \max\{ F(u) + cost (u,v) \ : \ u=1,\dots,v-2 \}
@@ -253,8 +255,8 @@ plus long chemin trouvé jusqu'à maintenant, nous remplaçons le plus
 long chemin et sa valeur par le nouveau chemin trouvé.
 
 \begin{ex}
-Considérons le vecteur $\overline{z}_1$ suivant: $(0,2\, ;\, 0\, ;\,
-0,4\, ;\, 0,6\, ;\, 0,6\, ;\, 0\, ;\, 1\, ;\, 0,2)$.
+Considérons le vecteur $\overline{z}_1$ suivant: $(0,2\ ;\ 0\ ;\
+0,4\ ;\ 0,6\ ;\ 0,6\ ;\ 0\ ;\ 1\ ;\ 0,2)$.
 
 Nous avons $F(1)=F(2)=0$. En effet, l'inégalité devant comporter au moins
 trois éléments, $F(1)$ et $F(2)$ ne pourront conduire à une telle
@@ -266,7 +268,7 @@ correspond au chemin vide. De plus,nous avons:
   
   Si nous calculons $F(3)+\overline{z}_{1,3}=0,2+0,4=0,6$. La
   longueur du plus long chemin est donc mise à jour et vaut
-  $0,6$. Cette valeur correspondant au chemin $\{1,2,3\}$.
+  $0,6$. Cette valeur correspond au chemin $\{1,2,3\}$.
 \item $\begin{aligned}[t] 
     F(4) &=  \max \left\{
         \begin{array}{lcl}
@@ -285,7 +287,7 @@ correspond au chemin vide. De plus,nous avons:
 
   Et $F(4)+\overline{z}_{1,4}=0,2+0,6=0,8$. La
   longueur du plus long chemin est donc mise à jour et vaut
-  $0,8$. Cette valeur correspondant au chemin $\{1,2,4\}$.
+  $0,8$. Cette valeur correspond au chemin $\{1,2,4\}$.
 
 \item $\begin{aligned}[t] 
     F(5) &=  \max \left\{
@@ -310,12 +312,12 @@ correspond au chemin vide. De plus,nous avons:
   Si nous calculons $F(5)+\overline{z}_{1,5}=0,2+0,6=0,8$. Le plus
   long chemin n'est donc pas mis à jour. 
 
-\item $F(6)= 0.2$ et $F(6)+\overline{z}_{1,6}=0,2+0=0,2$. Le plus cours 
+\item $F(6)= 0.2$ et $F(6)+\overline{z}_{1,6}=0,2+0=0,2$. Le plus long  
   chemin n'es pas mis à jour. 
 \item $F(7) = F(4) +\overline{z}_{1,4} -
   \min\{\overline{z}_{1,5},\overline{z}_{1,6}\}= 0,2 + 0,6 - 0 =
   0,8$. De plus, $F(7)+\overline{z}_{1,7}=0,8+1=1,8$. La longueur du
-  plus long est donc mise à jour et vaut $1,8$ et correspond au chemin $\{1,2,4,6,7\}$
+  plus long est donc mise à jour, vaut $1,8$ et correspond au chemin $\{1,2,4,6,7\}$
 \end{itemize}
 
 {\'A} la fin de la procédure, le plus long chemin trouvé est donc
@@ -328,58 +330,47 @@ ajoutée au modèle, est:
 \textcolor{red}{\LARGE pour ce paragraphe => que le texte}
 Dans ce paragraphe, nous présentons les résultats obtenus pour le
 modèle Start/End.  Les expérimentations ont été conduites
-sur les quatre familles d'instances présentées dans le
+sur les instances de la Famille 1 présentée dans le
 paragraphe~\ref{sec:instance_CECSP} et avec une limite de temps de
-1000 secondes. Le modèle, avec pour objectif la minimisation de la
-consommation totale de ressource est utilisé
-pour résoudre les instances. Le
+1000 secondes. Le modèle est utilisé avec l'objectif de minimisation de la
+consommation totale de ressource. Le
 tableau~\ref{tab:SE_CECSP} présente ces résultats.
 
 Dans ce tableau, nous avons comparé la qualité et le temps d'obtention
 des premières solutions pour chaque famille d'instances testées. Nous
 avons aussi comparé le temps nécessaire à l'obtention de la 
-solution optimale (1000 secondes si la solution trouvé n'est pas
+solution optimale (7200 secondes si la solution trouvée n'est pas
 optimale), la qualité de la solution, le nombre d'instances résolues
-et le nombre d'entre elles résolues à l'optimal.
+et le nombre d'entre elles résolues à l'optimum.
 
 \begin{table}[!htb]
   \begin{center}\small
-    \begin{tabularx}{\linewidth}{|Y|YY|YYYY|YY|YYYY|}
+    \begin{tabularx}{\linewidth}{|Y|YY|YYYY|}
       \hline
       \multirow{2}{*}{\#act.} & \multicolumn{2}{c|}{$1^{ère}$ sol.}&
-      \multicolumn{4}{c|}{final sol.} & \multicolumn{2}{c|}{$1^{ère}$ 
-        sol.}&
-      \multicolumn{4}{c|}{sol. finale} \\ 
-      \cline{2-13} 
-                               & tps(s) & gap & tps & gap  &  \%opt.&\%solv.&
-                                                                 tps
-                                                                 & gap
-                                                                 &
-                                                                 tps
-                                                                 & gap
-                                                                 &
-                                                                 \%opt. &\%solv.  \\ 
-      \hline
-      \multicolumn{7}{|l|}{Famille 1} & \multicolumn{6}{|l|}{Famille 2}\\
-      \hline
-      $10 $&$ 0,058 $&$ 38 $&$ 45 $&$ 2,9$ &$ 60 $&$ 100$ &$ 0,075 $&$ 24 $&$ 100 $&$ 5,6$ &$ 0 $&$ 100$ \\ 
-      $20 $&$ 0,25 $&$ 17 $&$ 100 $&$ 8,4$ &$ 0 $&$ 100$ & $ 0,37 $&$ 8,8 $&$ 100 $&$ 6,5$ &$ 0 $&$ 100$\\ 
-      $25 $&$ 0,88 $&$ 21 $&$ 100 $&$ 9,4$ &$ 0 $&$ 100$ &$ 2 $&$ 12 $&$ 100 $&$ 5,8$ &$ 0 $&$ 100$ \\ 
-      $30 $&$ 1,3 $&$ 35 $&$ 100 $&$ 10$ &$ 0 $&$ 100$&$ 3,1 $&$ 14 $&$ 100 $&$ 6,3$ &$ 0 $&$ 100$  \\ 
-      \hline   
-      \multicolumn{7}{|l|}{Famille 3} &  \multicolumn{6}{|l|}{Famille 4}\\
-      \hline 
-    $10 $&$ 0,064 $&$ 4,1 $&$ 64 $&$ 1,8$ &$ 40 $&$ 100$ &$ 0,037 $&$ 0 $&$ 0,037 $&$ 0$ &$ 100 $&$ 100$\\ 
-$20 $&$ 2,8 $&$ 6,8 $&$ 100 $&$ 3,9$ &$ 0 $&$ 100$ &$ 0,61 $&$ 0,72 $&$ 0,63 $&$ 0$ &$ 100 $&$ 100$\\ 
-$25 $&$ 17 $&$ 4,5 $&$ 100 $&$ 4,5$ &$ 0 $&$ 100$ &$ 1,5 $&$ 0,31 $&$ 1,5 $&$ 0$ &$ 100 $&$ 100$\\ 
-$30 $&$ 24 $&$ 6,4 $&$ 100 $&$ 4,1$ &$ 0 $&$ 80$ &$ 4,8 $&$ 0,07 $&$ 15 $&$ 0$ &$ 89 $&$ 89$ \\ 
-      \hline 
+      \multicolumn{4}{c|}{sol. finale}\\
+       	\cline{2-7} 
+ & time(s) & gap & time & gap &\%solved &  \%opt \\ 
+ \hline 
+$10$ & $0,42$ & $95$ & $5200$ & $42$ & $100$ & $33 $\\ 
+$20$ & $73$ & $80$ & $7200$ & $29$ & $100$ & $0 $\\ 
+$25$ & $330$ & $94$ & $7200$ & $58$ & $100$ & $0 $\\ 
+$30$ & $200$ & $82$ & $6500$ & $48$ & $100$ & $0 $\\ 
+$60$ & $310$ & $140$ & $7200$ & $63$ & $100$ & $0 $\\ 
+\hline 
     \end{tabularx}
   \end{center}
   \caption{Résultats du PLNE indexé par le temps du \CECSP~avec et
     sans coupes énergétiques.} 
   \label{tab:SE_CECSP}
 \end{table}
+
+Dans le tableau~\ref{tab:SE_CECSP}, nous pouvons voir que le modèle
+Start/End permet de résoudre seulement une petite partie des instances
+à l'optimum. Une solution est cependant trouvée pour toutes les
+instances mais la qualité de ces dernières ne sont pas très bonne. De
+meilleures solutions, obtenues avec le modèle On/Off, sont présentées
+dans le paragraphe suivante. 
 
 \subsubsection{Modèles On/Off}
 
@@ -392,7 +383,7 @@ instances de la Famille 1 (cf. tableau~\ref{tab:OO_f1}) avec une
 limite de temps de 1000 secondes.  
 
 Pour la Famille 4, le tableau~\ref{tab:OO_f4} présente le pourcentage
-d'instances résolues à l'optimal ainsi que le temps nécessaire à leur 
+d'instances résolues à l'optimum ainsi que le temps nécessaire à leur 
 résolution pour différentes combinaisons de coupes ajoutées au
 modèle. Dans le tableau, ces différentes inégalités sont représentées
 de la manière suivantes: 
@@ -401,11 +392,11 @@ de la manière suivantes:
  bornant supérieurement la distance entre deux événements;
 \item {\it Date} ou {\it D.} les inégalités bornant supérieurement la
   date des événements;
-\item {\it SàD} les inégalités déduites du problème du sac-à-dos
-  (cf. paragraphe~\ref{sec:maxDist}), et  
+\item {\it KP} les inégalités déduites du problème du sac-à-dos, et  
 \item {\it $\overline{Preem.}$} ou {\it $\overline{P.}$} les
-  inégalités de non-préemption (cf. paragraphe~\ref{sec:nonPreem}).
+  inégalités de non-préemption.
 \end{itemize}
+Ces inégalités sont décrites dans le paragraphe~\ref{sec:maxDist}. 
  Les deux premiers ensembles d'inégalités sont ajoutés directement
  dans le modèle et sont aussi utilisées comme borne plus fine dans les
  contraintes du modèle (voir paragraphe~\ref{sec:maxDist}).
@@ -422,20 +413,20 @@ de la manière suivantes:
      $Aucune$ & $ 0,3 $&$ 100 $&$ 164,14 $&$ 90,9 $&$ 635,4 $&$ 55,6 $&$ 968 $&$ 10$\\
      $ Sep.$ &$ 0,6 $&$ 100 $&$ 182,2$&$ 90,9 $&$ 727,3 $&$ 55, 6 $&$ 851$&$ 20$ \\
      $ Date $&$ 0,5 $&$ 100 $&$ 167,3 $&$ 90,9 $&$ 629,5$&$ 88,9 $&$ 961,4$&$ 20 $\\
-     $ SàD$&$ 0,5 $&$ 100 $&$ 164,7 $&$ 90,9 $&$ 555,1$&$ 66,7 $&$ 845,3$&$ 20 $\\
+     $ KP$&$ 0,5 $&$ 100 $&$ 164,7 $&$ 90,9 $&$ 555,1$&$ 66,7 $&$ 845,3$&$ 20 $\\
      $ \overline{Preem.}$ &$ 0,3$&$ 100 $&$ 330,9 $&$ 72,7 $&$ 822,4 $&$ 44,4 $&$ 914,8$&$ 10$ \\
      %$ Sep\ \$&$\ Date $$&$ 100 $&$ $&$ 90,9 $&$ $&$ 66,7 $&$ $&$ 10 \\
-     %$ Sep\ \$&$\ SàD$$&$ 100 $&$ $&$ 81,8 $&$ $&$ 77,8 $&$ $&$ 20 \\
+     %$ Sep\ \$&$\ KP$$&$ 100 $&$ $&$ 81,8 $&$ $&$ 77,8 $&$ $&$ 20 \\
      %$ Sep\ \$&$\ \overline{Preem.}$ $&$ $&$ 100 $&$ $&$ 81,8 $&$ $&$ 33,3 $&$ $&$ 10 \\
-     %$ Date\ \$&$\ SàD$$&$ 100 $&$ $&$ 90,9$&$ 88,8 $&$ $&$ 10\\
+     %$ Date\ \$&$\ KP$$&$ 100 $&$ $&$ 90,9$&$ 88,8 $&$ $&$ 10\\
      %$ Date\ \$&$\ \overline{Preem.}$ $&$100 $&$ $&$ 81,8 $&$ $&$ 66,7 $&$ $&$ 20 \\ 
-     %$ SàD\ \$&$\ \overline{Preem.}$ $&$ $&$ 100 $&$ $&$ 90,9 $&$ $&$ 33, 3 $&$ $&$ 10\\
-     $ I.\ \&\ T.\ \&\ SàD$&$ 0,6 $&$100 $&$ 154$&$ 90,9 $&$ 389,9 $&$ 77,8 $&$ 839,9$&$ 20$\\
-     $ I.\ \&\ T.\ \&\ \overline{P.}$ &$ 0,6 $&$ 100 $&$ 179,8 $&$ 90,9 $&$
+     %$ KP\ \$&$\ \overline{Preem.}$ $&$ $&$ 100 $&$ $&$ 90,9 $&$ $&$ 33, 3 $&$ $&$ 10\\
+     $ S.\ \&\ D.\ \&\ KP$&$ 0,6 $&$100 $&$ 154$&$ 90,9 $&$ 389,9 $&$ 77,8 $&$ 839,9$&$ 20$\\
+     $ S.\ \&\ D.\ \&\ \overline{P.}$ &$ 0,6 $&$ 100 $&$ 179,8 $&$ 90,9 $&$
                                                                    454,4 $&$ 77,8 $&$ 813,8$&$ 60$ \\
-     $ I.\ \&\ SàD\ \&\ \overline{P.}$&$ 0,5 $&$100 $&$ 182,2$&$ 90,9 $&$759,6 $&$ 33,3 $&$ 924,9$&$ 20$\\
-     $ T.\ \&\ SàD\ \&\ \overline{P.} $&$ 0,5$&$ 100 $&$ 170$&$ 90,9 $&$ 705$&$ 66,7 $&$ 816$&$ 50$\\
-     $ I.\ \&\ T.\ \&\ SàD\ \&\ \overline{P.}$&$ 0,9 $&$ 100 $&$ 278,9 $&$ 81,8 $&$ 510$&$ 88,9 $&$ 802,8$&$ 50$\\
+     $ S.\ \&\ KP\ \&\ \overline{P.}$&$ 0,5 $&$100 $&$ 182,2$&$ 90,9 $&$759,6 $&$ 33,3 $&$ 924,9$&$ 20$\\
+     $ D.\ \&\ KP\ \&\ \overline{P.} $&$ 0,5$&$ 100 $&$ 170$&$ 90,9 $&$ 705$&$ 66,7 $&$ 816$&$ 50$\\
+     $ S.\ \&\ D.\ \&\ KP\ \&\ \overline{P.}$&$ 0,9 $&$ 100 $&$ 278,9 $&$ 81,8 $&$ 510$&$ 88,9 $&$ 802,8$&$ 50$\\
       \hline
     \end{tabular}
   \end{center}
@@ -448,7 +439,7 @@ Dans le tableau~\ref{tab:OO_f4}, nous pouvons remarquer que le nombre
 d'instances à $10$ et $20$ activités résolues est du même ordre de
 grandeur pour toutes les combinaisons d'inégalités testées. Pour les
 instances à $25$ activités, les résultats sont plus hétérogènes mais
-les meilleures résultats sont obtenus en combinant toutes les
+les meilleurs résultats sont obtenus en combinant toutes les
 inégalités. Enfin, pour les instances à $30$ activités, les meilleurs
 résultats sont quant à eux obtenus en combinant seulement inégalités
 de non-préemption et les deux ensembles d'inégalités portant sur les
@@ -476,16 +467,16 @@ utilisées dans le tableau~\ref{tab:OO_f4}.
       $ Aucune$ &$ 100 $&$ 23,2 $&$ 81,8 $&$ 74,5 $&$ 22,2 $&$ 91,9 $&$ 0 $&$ 0$\\
       $ Sep$ &$ 100 $&$ <0,01 $&$ 100 $&$ 14,9 $&$ 44,4 $&$ 68,9 $&$ 0 $&$ 0$\\
       $ Date $ &$100$&$ 1,06 $&$ 100 $&$ 70,5 $&$ 33,3$&$ 88,1 $&$ 40$&$ 84,9 $\\
-      $ SàD$ &$ 100 $&$ 9,8 $&$ 100 $&$ 46,4 $&$ 77,78 $&$ 64,6 $&$ 25$&$ 70,7 $\\
+      $ KP$ &$ 100 $&$ 9,8 $&$ 100 $&$ 46,4 $&$ 77,78 $&$ 64,6 $&$ 25$&$ 70,7 $\\
       $ \overline{Preem.}$ &$ 100 $&$ 61,5 $&$ 81,8 $&$ 73,4 $&$ 0 $&$ 0 $&$ 0 $&$ 0$\\
-      $ S.\ \&\ D.\ \&\ SàD$&$ 100 $&$<0,01 $&$ 100$&$ 13,7 $&$ 100 $&$ 51,5 $&$ 50$&$ 70,6$\\
+      $ S.\ \&\ D.\ \&\ KP$&$ 100 $&$<0,01 $&$ 100$&$ 13,7 $&$ 100 $&$ 51,5 $&$ 50$&$ 70,6$\\
       $ S.\ \&\ D.\ \&\ \overline{P.}$ &$ 100 $&$ 4,77 $&$ 100 $&$ 45,5 $&$
                                                                    88,89 $&$ 75,1 $&$ 30$&$ 84,6 $\\
-      $ S.\ \&\ SàD\ \&\ \overline{P.}$ &$ 100 $&$ 8,67 $&$ 100 $&$ 68,3 $&$
+      $ S.\ \&\ KP\ \&\ \overline{P.}$ &$ 100 $&$ 8,67 $&$ 100 $&$ 68,3 $&$
                                                                    44,4
                 $&$ 88,1 $&$ 10 $&$ 93$\\
-     $ D.\ \&\ SàD\ \&\ \overline{P.}$ &$ 100$&$ 23,8 $&$ 100$&$ 60,1 $&$ 83,3$&$ 79,8 $&$ 30$&$ 88,2$\\
-     $ S.\ \&\ D.\ \&\ SàD\ \&\ \overline{P.}$ &$ 100 $&$ 0,07 $&$ 100 $&$ 35,7 $&$ 100$&$ 66,9 $&$ 10$&$ 87,1$\\
+     $ D.\ \&\ KP\ \&\ \overline{P.}$ &$ 100$&$ 23,8 $&$ 100$&$ 60,1 $&$ 83,3$&$ 79,8 $&$ 30$&$ 88,2$\\
+     $ S.\ \&\ D.\ \&\ KP\ \&\ \overline{P.}$ &$ 100 $&$ 0,07 $&$ 100 $&$ 35,7 $&$ 100$&$ 66,9 $&$ 10$&$ 87,1$\\
       \hline
     \end{tabular}
   \end{center}
@@ -496,8 +487,8 @@ utilisées dans le tableau~\ref{tab:OO_f4}.
 
 Dans le tableau~\ref{tab:OO_f4}, nous pouvons voir que les meilleurs
 résultats sont obtenus en combinant {\it Sep, Date} et {\it
-SàD}. Cependant, des résultats comparables sont obtenus en combinant
-{\it Sep, Date} et {\it $\overline{Preem.}$} ou {\it Sep, Date, SàD} et
+KP}. Cependant, des résultats comparables sont obtenus en combinant
+{\it Sep, Date} et {\it $\overline{Preem.}$} ou {\it Sep, Date, KP} et
 {\it $\overline{Preem.}$}.
 
 
@@ -507,13 +498,13 @@ Nous allons maintenant évaluer les performances relatives des
 améliorations du modèle On/Off dans le cadre du \RCPSP. Pour ce faire,
 les expérimentations ont été conduites sur les instances de Kone {\it
 et al}~\cite{modele_RCPSP} et décrites dans le
-paragraphe~\ref{sec:instances_RCPSP} avec un pré-calcul des fenêtre de
+paragraphe~\ref{sec:instances_RCPSP} avec un pré-calcul des fenêtres de
 temps des activités aussi décrit dans le
 paragraphe~\ref{sec:instances_RCPSP}. La limite de temps est fixée à
 1000 secondes.
 
 Pour ces instances, le tableau~\ref{tab:OO_PSP} présente le
-pourcentage d'instances résolues à l'optimal ainsi que le temps
+pourcentage d'instances résolues à l'optimum ainsi que le temps
 nécessaire à leur résolution pour différentes combinaisons de coupes
 ajoutées au modèle. 
 
@@ -548,16 +539,16 @@ simultanément.
 \subsection{Comparaison des différentes approches}
 
 Dans ce paragraphe, nous allons effectuer des comparaisons entre
-différentes des méthodes décrites ci-dessus. Dans un premier temps et
+les différentes méthodes décrites ci-dessus. Dans un premier temps et
 pour montrer que dans certains cas, le modèle indexé par le temps peut
 produire des solutions sous-optimales, nous comparons les résultats de
 ce dernier avec ceux du modèle On/Off (sans ajout de coupes
 particulières) sur la Famille d'instances 1.   
 
 Le tableau~\ref{CECSPMIPOBJ} présente ces résultats. Pour chacune des
-formulation, la première colonne décrit le temps passé dans la
+formulations, la première colonne décrit le temps passé dans la
 résolution du PLNE. La seconde colonne représente le pourcentage
-d'instances résolues à l'optimal et la troisième colonne le nombre
+d'instances résolues à l'optimum et la troisième colonne le nombre
 d'instances pour lesquelles une solution réalisable a été
 trouvé. Enfin, la dernière colonne du tableau montre la différence
 moyenne entre la valeur de l'objectif retourné par les deux
@@ -589,7 +580,8 @@ permet de trouver une solution réalisable pour plus d'instances que le
 modèle On/Off. Cependant, aucun des deux modèles n'est capable de
 résoudre les instances de manière optimale. Enfin, le modèle On/off
 trouve clairement de meilleures solutions que le modèle indexé par le
-temps. 
+temps ce qui tend à montrer que la considération du temps continu est
+profitable en pratique pour économiser les ressources utilisées.
 
 Les modèles présentés dans ce manuscrit ont de grandes difficultés à
 trouver des solutions optimales. En particulier lorsque des fonctions
@@ -605,12 +597,12 @@ Pour chacun des modèles, trois colonnes exposent les résultats. La
 première correspond au temps nécessaire pour trouver une solution (si
 une solution est trouvée). La seconde correspond au pourcentage
 d'instance résolue et la dernière colonne correspond au nombre
-d'instances prouvée réalisable. Cette dernière colonnes est introduite
+d'instances prouvées réalisables. Cette dernière colonne est introduite
 pour permettre de montrer que le modèle indexé par le temps peut
-prouver l'infaisabilité de l'instance alors que les modèles a
-événements trouve une solution pour cette même instance et qu'elle est
-donc réalisable. De ce fait, le modèle indexé par le temps
-sur-contraint bien le problème initial. 
+prouver l'infaisabilité d'une instance alors que les modèles a
+événements trouvent une solution pour cette même instance prouvant
+qu'elle est en fait réalisable. De ce fait, le modèle indexé par le
+temps sur-contraint bien de manière significative le problème initial.
 
 \begin{table}[ht] \centering
   \begin{tabular}{|c|ccc|ccc|ccc|}
@@ -654,8 +646,10 @@ Comme nous pouvons le voir dans le tableau~\ref{MIPresult}, le
 modèle indexé permet de trouver des solutions beaucoup plus rapidement
 que les modèles à événements. Cependant, ce modèle ne peut être
 employé comme une méthode de résolution exacte  puisque, pour
-certaines instances, seules des solutions fractionnaires existent. 
+certaines instances, seules des solutions fractionnaires existent.
+Ces résultats montrent ainsi encore que la résolution en temps continu
+peut apporter des gains significatifs en pratique. 
 
 Parmi les deux formulations basées sur les événements, la formulation
-On/Off est celle qui fournie les meilleurs résultats en termes de
+On/Off est celle qui fournit les meilleurs résultats en termes de
 temps de calcul et de nombre d'instances résolues. 
