--- a/part4/res_PPC.tex
+++ b/part4/res_PPC.tex
@@ -25,13 +25,13 @@ $b_i(t)$. Nous rappelons que, pour ce faire, seule la valeur de
 $b_i(t)$ à chaque début et fin d'activité doit être calculée
 (conséquence du théorème~\ref{theo_LPM_CECSP}).
 
-La procédure de branchement est inspirée du travail de Carlier{\it et
+La procédure de branchement est inspirée du travail de Carlier {\it et
   al.}~\cite{Carlier}. Au début de cette procédure, une activité peut
 commencer (respectivement finir) à tout instant $t \in [\ES,\LS{]}$
 (resp. $t \in [\EE,\LE{]}$). L'idée de l'algorithme est donc, à chaque
-noeud, de réduire la taille d'un de ces intervalles. Par exemple,
+n\oe ud, de réduire la taille d'un de ces intervalles. Par exemple,
 supposons que l'on ait choisi de réduire la taille du domaine de
-$st_i$, alors deux nouveaux noeuds sont créés: le premier avec la
+$st_i$, alors deux nouveaux n\oe uds sont créés: le premier avec la
 contrainte supplémentaire $st_i \in [\ES , (\ES+\LS) / 2]$ et le
 second avec la contrainte $st_i \in ](\ES+\LS) / 2,\LS{]}$ (voir
 figure~\ref{fig:branching}); et à chaque n\oe ud, un des raisonnements
@@ -123,16 +123,16 @@ algorithme ait les meilleures performances.
 Cependant, il est moins naturel que l'algorithme par balayage ait de
 moins bonnes performances que la méthode naïve. Ceci est dû au fait
 que la complexité de l'algorithme de balayage dépend du nombre
-d'intersection que l'algorithme doit calculer. Or, dans ce cas, ce
+d'intersections que l'algorithme doit calculer. Or, dans ce cas, ce
 nombre est très grand, ce qui ralentit grandement le temps de calcul
 de l'algorithme. 
 
 Dans le reste des expérimentations conduites sur le raisonnement
-énergétique, nous utiliserons donc la méthode de calcul de~\cite{DP}. 
+énergétique, nous utiliserons donc la méthode de calcul adaptée de~\cite{DP}. 
 
 \subsubsection{Intégration du raisonnement énergétique dans
   l'algorithme de branchement hybrides}
-\textcolor{red}{\LARGE pour ce paragraphe => que le texte}
+
 Dans ce paragraphe, nous présentons les résultats des expérimentations
 faites pour le raisonnement énergétique. Ce raisonnement est intégré
 dans l'algorithme de branchement hybride décrit dans le
@@ -141,54 +141,51 @@ l'heuristique de sélection de variable qui choisit la variable de plus
 petit domaine.
 
 Le tableau~\ref{tab:res_BB_ER} présente les résultats obtenus avec 
-pour valeur de $\epsilon$ $??$ . Cette valeur est choisie car c'est celle
+pour valeur de $\epsilon=2,5$ . Cette valeur est choisie car c'est celle
 qui permettait d'obtenir les meilleurs résultats. Les autres valeurs
-de paramètres testées étant: $??$. Dans ce tableau, la première
+de paramètres testées étant: $10$ et $5$. Dans ce tableau, la première
 colonne décrit le temps nécessaire pour résoudre les instances. Les
-deuxièmes et troisième colonnes montrent le pourcentage de temps passé
+deuxième et troisième colonnes montrent le pourcentage de temps passé
 dans la résolution du PLNE et dans l'arbre de recherche
 respectivement. La quatrième colonne énonce le pourcentage d'instances
 résolues. Les cinquième et sixièmes colonnes décrivent respectivement
-le nombre de n\oe ud contenus dans l'arbre de recherche et de programme
-linéaire en nombres entiers résolus. Enfin, les deux dernières colonnes
-exhibent le nombre de fois où l'algorithme de vérification a détecté
-une incohérence et le nombre d'ajustements appliqués. 
+ le nombre de n\oe ud contenus dans l'arbre de recherche et de programme
+linéaire en nombres entiers résolus. Enfin, la dernière colonne
+exhibe le nombre d'ajustements appliqués. 
 
 \begin{table}[!htb]
   \begin{center}
-    \begin{tabular}{|c|M{1.8cm}M{1.8cm}M{1.8cm}ccccc|}
+    \begin{tabular}{|c|M{1.8cm}M{1.8cm}M{1.8cm}cccc|}
       \hline
-      \#act. &  \multicolumn{8}{c|}{Méthode de branchement hybride}\\ 
-             &  \multicolumn{8}{c|}{$\epsilon=2.5$} \\ 
+      \#act. &  \multicolumn{7}{c|}{Méthode de branchement hybride}\\ 
+             &  \multicolumn{7}{c|}{$\epsilon=2.5$} \\ 
       \hline 
-      \multicolumn{9}{|l|}{Famille 1 }\\ 
+      \multicolumn{8}{|l|}{Famille 1 }\\ 
       \hline 
-             & Tps total(s) & Tps CPLEX(\%) & Tps arbre(\%) & \%solv.  & \#n\oe ud & \#PLNE &\#fail. & \#adj. \\ 
+             & Tps total(s) & Tps CPLEX(\%) & Tps arbre(\%) & \%solv.  & \#n\oe ud & \#PLNE  & \#adj. \\ 
       \hline 
-$10$ & $0.117917$ & $87.6697$ & $12.3304$ & $100$ & $15$ & $6$ & $0$ & $2$ \\ 
-$20$ & $7.04862$ & $98.1343$ & $1.86568$ & $100$ & $38$ & $12$ & $0$ & $14$ \\ 
-$25$ & $33.8461$ & $99.0295$ & $0.970495$ & $100$ & $54$ & $10$ & $0$ & $34$ \\ 
-$30$ & $146.39$ & $99.3763$ & $0.623653$ & $100$ & $69$ & $11$ & $0$ &
-                                                                       $28$ \\
-  \hline 	
-      \multicolumn{9}{|l|}{Famille 2 }\\ 
+$10$ & $0,09$ & $83,19$ & $16,81$ & $100$ & $25$ & $6$ & $6$ \\ 
+$20$ & $660,21$ & $96,97$ & $3,03$ & $90$ & $3809$ & $20611$ & $2716$ \\ 
+$25$ & $821,9$ & $98,3$ & $1,7$ & $88$ & $89$ & $10$ &  $95$ \\ 
+$30$ & $112,58$ & $99,14$ & $0,86$ & $100$ & $102$ & $10$ &  $114$ \\ 
+\hline 	
+      \multicolumn{8}{|l|}{Famille 2 }\\ 
       \hline 
-             & Tps total(s) & Tps CPLEX(\%) & Tps arbre(\%) & \%solv.  & \#n\oe ud & \#PLNE& \#fail. & \#adj. \\ 
+             & Tps total(s) & Tps CPLEX(\%) & Tps arbre(\%) & \%solv.  & \#n\oe ud & \#PLNE& \#adj. \\ 
       \hline 
-$10$ & $1109.53$ & $81.2472$ & $18.7527$ & $100$ & $46783$ & $140276$ & $0$ & $65446$ \\ 
-$20$ & $728.035$ & $97.5542$ & $2.44579$ & $90$ & $1930$ & $9296$ & $4$ & $3851$ \\ 
-$25$ & $1825.15$ & $98.7036$ & $1.29653$ & $75$ & $495$ & $761$ & $3$ & $458$ \\ 
-$30$ & $1971.81$ & $99.6238$ & $0.376182$ & $75$ & $150$ & $5$ & $7$ & $659$ \\ 
-$60$ & $7216.47$ & $0$ & $0$ & $0$ & $3831$ & $1217$ & $12$ & $1915$ \\ 
+$10$ & $1109,5$ & $81,2$ & $18,75$ & $100$ & $46783$ & $140276$ & $65446$ \\ 
+$20$ & $728,04$ & $97,55$ & $2,45$ & $90$ & $1930$ & $9296$  & $3851$ \\ 
+$25$ & $1825,15$ & $98,7$ & $1,3$ & $75$ & $495$ & $761$ &  $458$ \\ 
+$30$ & $1971,81$ & $99,62$ & $0,38$ & $75$ & $150$ & $5$ &  $659$ \\ 
       \hline 	
-      \multicolumn{9}{|l|}{Famille 4 }\\ 
+      \multicolumn{8}{|l|}{Famille 4 }\\ 
       \hline 
-             & Tps total(s) & Tps CPLEX(\%) & Tps arbre(\%) & \%solv.  & \#n\oe ud & \#PLNE &\#fail. & \#adj. \\ 
+             & Tps total(s) & Tps CPLEX(\%) & Tps arbre(\%) & \%solv.  & \#n\oe ud & \#PLNE  & \#adj. \\ 
       \hline 
- $10$ & $0.18712$ & $87.5469$ & $12.4531$ & $100$ & $25$ & $5$ & $0$ & $33$ \\ 
-$20$ & $1617.07$ & $98.9689$ & $1.03107$ & $77$ & $68$ & $9$ & $1$ & $246$ \\ 
-$25$ & $104.934$ & $99.6018$ & $0.398301$ & $100$ & $66$ & $6$ & $0$ & $252$ \\ 
-$30$ & $1749.76$ & $99.7266$ & $0.273242$ & $77$ & $107$ & $9$ & $1$ & $424$ \\  
+$10$ & $0,19$ & $87,55$ & $12,45$ & $100$ & $25$ & $5$ &  $33$ \\ 
+$20$ & $1617,07$ & $98,97$ & $1,03$ & $77$ & $68$ & $9$ & $246$ \\ 
+$25$ & $104,9$ & $99,6$ & $0,4$ & $100$ & $66$ & $6$  & $252$ \\ 
+$30$ & $1749,76$ & $99,72$ & $0,27$ & $77$ & $107$ & $9$ &  $424$ \\ 
       \hline 
     \end{tabular}
   \end{center}
@@ -197,10 +194,16 @@ $30$ & $1749.76$ & $99.7266$ & $0.273242$ & $77$ & $107$ & $9$ & $1$ & $424$ \\
   \label{tab:res_BB_ER}
 \end{table}
 
+Tout d'abord, nous pouvons remarquer que l'algorithme de branchement
+hybride permet de résoudre des instances jusqu'à $30$ activités en
+moins de $7200$ secondes. De plus, nous pouvons voir qu'une bonne
+partie du temps de résolution est passé dan s le programme linéaire
+mixte. Enfin, le raisonnement énergétique permet de procéder à un
+nombre important d'ajustements. 
+
 \subsection{Raisonnements basés sur le Time-Table}
 \label{sec:expe_TT}
 
-\textcolor{red}{\LARGE pour ce paragraphe => que le texte}
 Dans ce paragraphe, nous montrons l'intérêt d'ajouter le
 raisonnement basé sur un problème de flot et sur le raisonnement
 Time-Table. Pour ce faire, à chaque n\oe ud de l'arbre de recherche,
@@ -210,44 +213,42 @@ incohérence.
 Pour ces expérimentations, nous avons aussi considéré l'heuristique
 choisissant la variable de plus petit domaine. Le
 tableau~\ref{tab:res_BB_ERFlot} présente les résultats obtenus avec
-pour valeur de $\epsilon$ $??$. Les colonnes du tableau correspondent
+pour valeur de $\epsilon=2,5$. Les colonnes du tableau correspondent
 à celle du tableau~\ref{tab:res_BB_ER}.
 
 \begin{table}[!htb]
   \begin{center}
-    \begin{tabular}{|c|M{1.8cm}M{1.8cm}M{1.8cm}ccccc|}
+    \begin{tabular}{|c|M{1.8cm}M{1.8cm}M{1.8cm}ccc|}
       \hline
-      \#act. &  \multicolumn{8}{c|}{Méthode de branchement hybride}\\ 
-             &  \multicolumn{8}{c|}{$\epsilon=2.5$} \\ 
+      \#act. &  \multicolumn{6}{c|}{Méthode de branchement hybride}\\ 
+             &  \multicolumn{6}{c|}{$\epsilon=2.5$} \\ 
       \hline 
-      \multicolumn{9}{|l|}{Famille 1 }\\ 
+      \multicolumn{7}{|l|}{Famille 1 }\\ 
       \hline 
-             & Tps total(s) & Tps CPLEX(\%) & Tps arbre(\%) & \%solv.  & \#n\oe ud & \#PLNE &\#fail. & \#adj. \\ 
+             & Tps total(s) & Tps CPLEX(\%) & Tps arbre(\%) & \%solv.  & \#n\oe ud & \#PLNE \\ 
       \hline 
-     $10$ & $0.123956$ & $51.4955$ & $48.5045$ & $100$ & $25$ & $6$ & $0$ & $0$ \\ 
-$20$ & $5.00496$ & $88.7034$ & $11.2967$ & $100$ & $58$ & $12$ & $0$ & $0$ \\ 
-$25$ & $26.6403$ & $85.7958$ & $14.2041$ & $100$ & $79$ & $10$ & $0$ & $0$ \\ 
-$30$ & $70.8224$ & $96.6868$ & $3.31319$ & $100$ & $100$ & $11$ & $0$
-                                                                                 & $0$ \\ 
+$10$ & $0,12$ & $51,5$ & $48,5$ & $100$ & $25$ & $6$ \\ 
+$20$ & $5,0$ & $88,7$ & $11,3$ & $100$ & $58$ & $12$ \\
+$25$ & $26,6$ & $85,8$ & $14,2$ & $100$ & $79$ & $10$ \\
+$30$ & $70,8$ & $96,69$ & $3,3$ & $100$ & $100$ & $11$ \\
 \hline 	
-      \multicolumn{9}{|l|}{Famille 2 }\\ 
+      \multicolumn{7}{|l|}{Famille 2 }\\ 
       \hline 
-             & Tps total(s) & Tps CPLEX(\%) & Tps arbre(\%) & \%solv.  & \#n\oe ud & \#PLNE& \#fail. & \#adj. \\ 
+             & Tps total(s) & Tps CPLEX(\%) & Tps arbre(\%) & \%solv.  & \#n\oe ud & \#PLNE\\
       \hline 
- $10$ & $0.171939$ & $63.031$ & $36.969$ & $100$ & $24$ & $6$ & $0$ & $0$ \\ 
-$20$ & $9.03365$ & $86.4555$ & $13.5445$ & $100$ & $59$ & $12$ & $0$ & $0$ \\ 
-$25$ & $155.237$ & $96.3074$ & $3.6925$ & $100$ & $96$ & $5$ & $6$ & $0$ \\ 
-$30$ & $98.656$ & $96.7409$ & $3.25907$ & $100$ & $107$ & $5$ & $3$ & $0$ \\ 
-      \hline 	
-\multicolumn{9}{|l|}{Famille 4 }\\ 
+$10$ & $0,17$ & $63,0$ & $37,0$ & $100$ & $24$ & $6$ \\
+$20$ & $9,03$ & $86,5$ & $13,5$ & $100$ & $59$ & $12$ \\
+$25$ & $81,7$ & $94,1$ & $5,9$ & $100$ & $86$ & $10$ \\
+$30$ & $118,9$ & $96,7$ & $3,3$ & $100$ & $106$ & $11$ \\
+     \hline 	
+\multicolumn{7}{|l|}{Famille 4 }\\ 
       \hline 
-             & Tps total(s) & Tps CPLEX(\%) & Tps arbre(\%) & \%solv.  & \#n\oe ud & \#PLNE &\#fail. & \#adj. \\ 
+             & Tps total(s) & Tps CPLEX(\%) & Tps arbre(\%) & \%solv.  & \#n\oe ud & \#PLNE \\
       \hline 
- $10$ & $0.286098$ & $77.2834$ & $22.7167$ & $100$ & $27$ & $6$ & $1$ & $0$ \\ 
-$20$ & $1476.08$ & $93.1846$ & $6.8154$ & $80$ & $98$ & $10$ & $11$ & $0$ \\ 
-$25$ & $2568.54$ & $90.1947$ & $9.80506$ & $66$ & $18973$ & $8$ & $9424$ & $0$ \\ 
-$30$ & $3181.35$ & $98.254$ & $1.74586$ & $60$ & $20908$ & $8$ & $10368$ & $0$ \\ 
-$60$ & $3600.59$ & $0$ & $0$ & $50$ & $16155$ & $0$ & $8033$ & $0$ \\ 
+$10$ & $0,29$ & $77,3$ & $22,7$ & $100$ & $27$ & $6$ \\
+$20$ & $1476,1$ & $93,2$ & $6,8$ & $80$ & $98$ & $10$ \\
+$25$ & $2568,5$ & $90,2$ & $9,8$ & $66$ & $18973$ & $8$ \\
+$30$ & $3181,3$ & $98,3$ & $1,7$ & $60$ & $20908$ & $8$ \\
       \hline 
     \end{tabular}
   \end{center}
@@ -256,48 +257,49 @@ $60$ & $3600.59$ & $0$ & $0$ & $50$ & $16155$ & $0$ & $8033$ & $0$ \\
   \label{tab:res_BB_ERFlot}
 \end{table}
 
+L'algorithme de branchement, combiné au raisonnement basé sur les
+flots, permet de résoudre des instances du \CECSP~avec $30$ activités en
+moins de $7200$ secondes. De plus, nous pouvons voir que, comme dans
+le cas du raisonnement énergétique, une bonne
+partie du temps de résolution est aussi passé dans le programme linéaire
+mixte. Le raisonnement basé sur les flots permet aussi d'obtenir de
+meilleurs résultats que le raisonnement énergétique pour les Familles 2
+et 1 et de moins bons résultats pour la Famille 4. La recherche de
+propriétés inhérentes au problème permettant de savoir quel 
+raisonnement appliqué est une direction de recherche intéressante. 
+
 \subsection{Comparaison des différentes approches}
 
-\textcolor{red}{\LARGE pour comparaison BB/OO => que le texte}
 Dans ce paragraphe, nous allons comparer les résultats obtenus avec le
 modèle On/Off avec ceux obtenus par la méthode de branchement
 hybride. Ces résultats sont décrits dans le
 tableau~\ref{tab:comp_OOBB}.
 
-Dans ce tableau, les trois premières colonnes présentent les résultats
-obtenus par le modèle On/Off et les trois suivantes ceux obtenus par
+Dans ce tableau, les deux premières colonnes présentent les résultats
+obtenus par le modèle On/Off et les deux suivantes ceux obtenus par
 la méthode de branchement hybride.   
 \begin{table}[!htb]
   \begin{center}
-    \begin{tabular}{|c|ccc|}
+    \begin{tabular}{|c|cc|cc|}
       \hline
-      \#tasks & \multicolumn{3}{c|}{Modèle On/Off}\\ 
+      \#tasks & \multicolumn{2}{c|}{Modèle On/Off}&
+                                                    \multicolumn{2}{c|}{Algo. hybride}\\ 
       \hline 
-              & time(s) &\%solv. &\%feas. \\ 
+              & tps(s) &\%solv. & tps & \%solv.\\ 
       \hline
-      \multicolumn{4}{|c|}{Famille 1}\\
+      \multicolumn{5}{|c|}{Famille 1}\\
       \hline 
-      $10 $& $0,22$ & $100$ & $100 $ \\ 
-      $20 $& $11,56$ & $100$ & $100 $ \\ 
-      $25 $& $58,79$ & $100$ & $100 $ \\ 
-      $30 $& $1582,9$ & $80$ & $80 $ \\ 
-      $60 $& $4969,51$ & $80$ & $80 $ \\ 
+      $10 $& $0,22$ & $100$ & $0,12$ &  $100$ \\ 
+      $20 $& $11,56$ & $100$ & $5,0$ & $100$ \\ 
+      $25 $& $58,79$ & $100$ & $26,6$ &$100 $ \\ 
+      $30 $& $1582,9$ & $80$ & $70,8$ & $100 $ \\  
       \hline 
-      \multicolumn{4}{|c|}{Famille 2}\\
+      \multicolumn{5}{|c|}{Famille 2}\\
       \hline 
-      $10 $& $0,29$ & $100$ & $100 $ \\ 
-      $20 $& $27,2$ & $100$ & $100 $ \\ 
-      $25 $& $380,20$ & $100$ & $100 $ \\ 
-      $30 $& $2634,3$ & $70$ & $70 $ \\ 
-      $60 $& $6104,6$ & $50$ & $50 $ \\ 
-      \hline 
-      \multicolumn{4}{|c|}{Famille 4}\\
-      \hline 
-$10$&$	0,23	$&$	100	$&$	100	$\\
-$20$&$	734,04	$&$	90,9	$&$	90,9	$\\
-$25$ &     $	2102,85	$&$	77,8	$&$	77,8	$\\ 
-$30$   &   $	4483,4	$&$	60	$&$	60$\\
-$60$ & $	7200	$&$	0	$&$	0$\\ 
+      $10 $& $0,29$ & $100$ & $0,17$ &$100 $ \\ 
+      $20 $& $27,2$ & $100$ & $9,03$&$100 $ \\ 
+      $25 $& $380,20$ & $100$ & $81,7$ &$100 $ \\ 
+      $30 $& $2634,3$ & $70$ & $118,9$ &$100 $ \\  
       \hline 
     \end{tabular}
   \end{center}
@@ -306,9 +308,13 @@ $60$ & $	7200	$&$	0	$&$	0$\\
   \label{tab:comp_OOBB}
 \end{table}
 
+Dans le tableau~\ref{tab:comp_OOBB}, nous pouvons voir que, pour les
+Familles 1 et 2, l'algorithme de branchement hybride permet de
+résoudre plus d'instances que le modèle On/Off en un temps moins
+important. Dans certains cas, la résolution devient $20$ fois plus
+rapide grâce à l'utilisation de cette méthode. 
 
-\textcolor{red}{\LARGE texte ok + tableau ok}
-Nous allons maintenant présenté les quelques résultats obtenus pour
+Nous allons maintenant présenter les quelques résultats obtenus pour
 les instances de la famille $LP$ (avec des fonctions de rendement
 concaves et affines par morceaux). Cependant, comme seules les
 instances à $10$ ont pu être résolues. Ce sont donc seulement ces
@@ -321,7 +327,7 @@ deux raisonnements combinés. Pour chaque ligne, la première colonne
 correspond au temps nécessaire à la résolution des instances. La
 seconde exhibe le temps passé dans l'arbre de branchement. Enfin, la
 troisième et quatrième colonne présentent respectivement le nombre de
-PLNE résolus et le nombre de n\oe ud dans l'arbre.
+PLNE résolus et le nombre de n\oe uds dans l'arbre.
 
 
 \begin{table}[!htb]
@@ -347,10 +353,10 @@ lorsqu'il est utilisé sans le raisonnement énergétique mais lorsque
 les deux raisonnements sont combinés ils deviennent plus efficace que
 l'un ou l'autre utilisé seul. 
 
-La deuxième chose que nous pouvons remarquer est que, lors de la
+Nous pouvons également remarquer est que, lors de la
 résolution, la plupart du temps est passé dans la recherche d'une
 solution au PLNE. De ce fait, l'amélioration des performances de cette
-méthode devra obligatoirement passée par une amélioration des
+méthode devra obligatoirement passer par une amélioration des
 performances du PLNE. 
 
 Pour les instances de la Famille $L$, une solution a été trouvée pour
